7 February 2014: Wouter
	- Fix #551: change Regent to Copyright holder in the LICENSE,
	  to match the definition on opensource.org for the BSD License.

27 January 2014: Matthijs
	- nsid can be set with "ascii_somestring" in ascii.

27 January 2014: Wouter
	- rcode REFUSED for queries to non-hosted zones.

20 January 2014: Wouter
	- Fix printout of high-chars in TXT on NetBSD.

17 January 2014: Wouter
	- Fix type CAA.
	- Fix type EUI48.

15 January 2014: Matthijs
	- Bump to 3.2.18

13 January 2014: Wouter
	- Check if configure in srcdir collides with outofdir build.

8 January 2014: Matthijs
	- Bugfix #510: Use a different zone stats file per process.
	- Bugfix #542: Match RRSIG TTL with SOA TTL in negative response.
	- From trunk: 
		- 2 January 2014: Wouter - Log ip address for sendto failures.

2 January 2014: Wouter
	- Log ip address for sendto failures.

3 December 2013: Matthijs
	- Support for CAA RRtype (RFC 6844).
	- Bugfix #509: USE_ZONE_STATS uses initialised memory for statistics data.

26 November 2013: Wouter
	- Fix zonec for read of rr type WKS.

18 November 2013: Matthijs
	- Explain RRL false negatives with multiple processes.

11 November 2013: Wouter
	- Fix bug#534: IXFR query loop over UDP for zones that are unchanged.

11 November 2013: Matthijs
	- EUI48 and EUI64 is now RFC 7043

14 October 2013: Wouter
	- Fix for zone transfer that has different-cased RRSIG signer names
	  or NSEC next-owner names.

20 August 2013: Matthijs
	- tsig errors on incoming tsig print key name and source IP of query.

20 August 2013: Wouter
	- Fix time at 2038, uint32s changed to time_t, support 64bit time_t.

13 August 2013: Wouter
	- Bugfix#518 Incorrect RRL prefix length option names in nsd.conf
	  man page from Ville Mattila.

6 August 2013: Wouter
	- Removed use of random when arc4random is available.  Thus, random
	  and srandom are then not linked with the executable.

9 July 2013: Matthijs
	- Code review Wouter, Yuri, Willem.

28 June 2013: Matthijs